--- a/index.html
+++ b/index.html
@@ -848,145 +848,7 @@
           </div>
         </section>
 
-        <section id="value-propositions" class="container mc-mst-12 mc-py-4 mc-pb-sm-0 mc-pt-sm-9">
-          <h2 class="mc-text-h5 mc-mb-4 d-sm-none">Class Info</h2>
-          <ul class="row">
-            <li class="col-lg-3 col-sm-6 col-12">
-              <div
-                class="row no-gutters align-items-center mc-text--center justify-content-start justify-content-sm-center"
-              >
-                <span class="classes-icon mc-corners--circle d-flex align-items-center justify-content-center"
-                  ><svg
-                    width="24"
-                    height="25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    aria-hidden="true"
-                    role="img"
-                    class="mc-icon mc-icon--lg"
-                  >
-                    <path
-                      d="M11.187 15.37c-.613.424-1.11.166-1.11-.585V10.21c0-.748.495-1.01 1.11-.585l3.045 2.105c.613.424.615 1.11 0 1.536l-3.045 2.105Z"
-                      fill="currentColor"
-                    ></path>
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M20.857 20.19H3.143C2.37 20.19 2 19.825 2 19.07V5.924c0-.756.371-1.12 1.143-1.12h17.714c.772 0 1.143.364 1.143 1.12V19.07c0 .756-.371 1.12-1.143 1.12ZM3.43 17.391v1.399h1.428v-1.399H3.43Zm0-2.797v1.398h1.428v-1.398H3.43Zm0-2.797v1.398h1.428v-1.398H3.43Zm0-2.798v1.4h1.428V9H3.43Zm0-2.797v1.399h1.428V6.203H3.43Zm2.857 0v12.588h11.428V6.203H6.286Zm12.857 11.19v1.398h1.428v-1.399h-1.428Zm0-2.798v1.398h1.428v-1.398h-1.428Zm0-2.797v1.398h1.428v-1.398h-1.428Zm0-2.798v1.4h1.428V9h-1.428Zm0-2.797v1.399h1.428V6.203h-1.428Z"
-                      fill="currentColor"
-                    ></path></svg
-                ></span>
-                <div class="col-10 col-sm-12 mc-text--left mc-text-sm--center mc-pl-4 mc-pl-sm-0 mc-pt-sm-4">
-                  <h3 class="mc-text-h5 mc-mb-1">6 Hours of Video</h3>
-                  <p class="mc-font-body mc-opacity--muted">
-                    Level up your skills with hours of content on your own time
-                  </p>
-                </div>
-              </div>
-            </li>
-            <li class="col-lg-3 col-sm-6 col-12">
-              <div
-                class="row no-gutters align-items-center mc-text--center justify-content-start justify-content-sm-center"
-              >
-                <span class="classes-icon mc-corners--circle d-flex align-items-center justify-content-center"
-                  ><svg
-                    width="24"
-                    height="25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    aria-hidden="true"
-                    role="img"
-                    class="mc-icon mc-icon--lg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M21.646 5.31c.45.434.474 1.164.056 1.63L10.324 19.632c-.21.235-.504.368-.813.368-.308 0-.603-.133-.813-.368l-6.4-7.14a1.185 1.185 0 0 1 .056-1.63 1.082 1.082 0 0 1 1.57.059l5.587 6.232L20.076 5.368a1.082 1.082 0 0 1 1.57-.059Z"
-                      fill="currentColor"
-                    ></path></svg
-                ></span>
-                <div class="col-10 col-sm-12 mc-text--left mc-text-sm--center mc-pl-4 mc-pl-sm-0 mc-pt-sm-4">
-                  <h3 class="mc-text-h5 mc-mb-1">20 Bite-size Lessons</h3>
-                  <p class="mc-font-body mc-opacity--muted">Learn with our easy to consume short videos</p>
-                </div>
-              </div>
-            </li>
-            <li class="col-lg-3 col-sm-6 col-12">
-              <div
-                class="row no-gutters align-items-center mc-text--center justify-content-start justify-content-sm-center"
-              >
-                <span class="classes-icon mc-corners--circle d-flex align-items-center justify-content-center"
-                  ><svg
-                    width="24"
-                    height="25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    aria-hidden="true"
-                    role="img"
-                    class="mc-icon mc-icon--lg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M6.77 10.603a1.111 1.111 0 0 1 1.571 0L12 14.262l3.659-3.66a1.111 1.111 0 0 1 1.571 1.572l-4.444 4.445a1.111 1.111 0 0 1-1.572 0L6.77 12.174a1.111 1.111 0 0 1 0-1.571Z"
-                      fill="currentColor"
-                    ></path>
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M12 2.5c.613 0 1.11.497 1.11 1.111v11.667a1.111 1.111 0 0 1-2.221 0V3.61c0-.614.497-1.111 1.11-1.111ZM3.111 16.945c.614 0 1.111.498 1.111 1.111v1.111c0 .614.498 1.112 1.111 1.112h13.334c.613 0 1.11-.498 1.11-1.111v-1.112a1.111 1.111 0 1 1 2.223 0v1.111a3.333 3.333 0 0 1-3.333 3.334H5.333A3.333 3.333 0 0 1 2 19.167v-1.11c0-.614.497-1.112 1.111-1.112Z"
-                      fill="currentColor"
-                    ></path></svg
-                ></span>
-                <div class="col-10 col-sm-12 mc-text--left mc-text-sm--center mc-pl-4 mc-pl-sm-0 mc-pt-sm-4">
-                  <h3 class="mc-text-h5 mc-mb-1">Class Guide</h3>
-                  <p class="mc-font-body mc-opacity--muted">Download our class guides for exclusive content</p>
-                </div>
-              </div>
-            </li>
-            <li class="col-lg-3 col-sm-6 col-12">
-              <div
-                class="row no-gutters align-items-center mc-text--center justify-content-start justify-content-sm-center"
-              >
-                <span class="classes-icon mc-corners--circle d-flex align-items-center justify-content-center"
-                  ><svg
-                    width="24"
-                    height="25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    aria-hidden="true"
-                    role="img"
-                    class="mc-icon mc-icon--lg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M7.65 3.507a4.037 4.037 0 1 1 3.09 7.46 4.037 4.037 0 0 1-3.09-7.46ZM9.193 4.96a2.277 2.277 0 1 0 0 4.553 2.277 2.277 0 0 0 0-4.553Z"
-                      fill="currentColor"
-                    ></path>
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M9.194 13.378a5.433 5.433 0 0 0-5.433 5.433v2.105a.88.88 0 1 1-1.761 0V18.81a7.194 7.194 0 1 1 14.388 0v2.105a.88.88 0 1 1-1.76 0V18.81a5.433 5.433 0 0 0-5.434-5.433ZM14.806 4.96c-.178 0-.355.02-.529.06a.88.88 0 1 1-.4-1.713 4.037 4.037 0 1 1 .93 7.967c-.29 0-.577-.031-.859-.091a.88.88 0 1 1 .37-1.722c.16.034.324.052.488.052m0-4.553a2.277 2.277 0 0 1 0 4.553M15.316 12.455a.88.88 0 0 1 1.05-.668A7.194 7.194 0 0 1 22 18.81v2.105a.88.88 0 1 1-1.76 0V18.81a5.434 5.434 0 0 0-4.255-5.306.88.88 0 0 1-.669-1.05Z"
-                      fill="currentColor"
-                    ></path></svg
-                ></span>
-                <div class="col-10 col-sm-12 mc-text--left mc-text-sm--center mc-pl-4 mc-pl-sm-0 mc-pt-sm-4">
-                  <h3 class="mc-text-h5 mc-mb-1">For All Levels</h3>
-                  <p class="mc-font-body mc-opacity--muted">
-                    Designed to be valuable whether you’re a beginner or a pro
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </section>
-
-        <nav class="jump-nav mc-mt-10 uncontainer d-none">
+        <nav class="jump-nav mc-mt-10 uncontainer">
           <div class="d-flex justify-content-center mc-h-100">
             <a
               class="jump-nav__item jump-nav__item-active mc-px-4 mc-px-xs-6 mc-px-sm-9 d-flex flex-column justify-content-center align-items-center col-auto"
